Minor text content changes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1><u>About</u></h1>
             <div id="aboutTrack" class="tracker">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vehicula posuere hendrerit. Donec sed fermentum augue. Praesent sapien lacus, posuere vitae risus sit amet, mattis suscipit erat. Praesent venenatis nibh lectus. Vivamus at volutpat metus. Nullam tincidunt ornare nisl in hendrerit. Proin sapien lectus, imperdiet eget odio eget, egestas lobortis tortor. Quisque mi ipsum, mattis eget dapibus in, eleifend et quam. Integer pulvinar quam ac nisl pharetra, ut tempus magna finibus. Praesent tristique imperdiet tincidunt. Nullam semper ipsum eu pharetra volutpat. Phasellus sodales tempor velit id accumsan.
+                    B.SC Computer Science student at Leeds Beckett University
                 </p>
             </div>
         </div>
@@ -74,21 +74,21 @@
                         <td class="rainbow" id="serv1">
                             <h2><u>Software Development</u></h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vehicula posuere hendrerit. Donec sed fermentum augue. Praesent sapien lacus, posuere vitae risus sit amet, mattis suscipit erat. Praesent venenatis nibh lectus. Vivamus at volutpat metus. Nullam tincidunt ornare nisl in hendrerit. Proin sapien lectus, imperdiet eget odio eget, egestas lobortis tortor. Quisque mi ipsum, mattis eget dapibus in, eleifend et quam. Integer pulvinar quam ac nisl pharetra, ut tempus magna finibus. Praesent tristique imperdiet tincidunt. Nullam semper ipsum eu pharetra volutpat. Phasellus sodales tempor velit id accumsan.
+                                Bespoke JAVA & C# software development.
                             </p>
                         </td>
                         <td></td>
                         <td class="rainbow" id="serv2">
                             <h2><u>Web Development</u></h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vehicula posuere hendrerit. Donec sed fermentum augue. Praesent sapien lacus, posuere vitae risus sit amet, mattis suscipit erat. Praesent venenatis nibh lectus. Vivamus at volutpat metus. Nullam tincidunt ornare nisl in hendrerit. Proin sapien lectus, imperdiet eget odio eget, egestas lobortis tortor. Quisque mi ipsum, mattis eget dapibus in, eleifend et quam. Integer pulvinar quam ac nisl pharetra, ut tempus magna finibus. Praesent tristique imperdiet tincidunt. Nullam semper ipsum eu pharetra volutpat. Phasellus sodales tempor velit id accumsan.
+                                HTML, CSS & JavaScript front end web development catering for a wide variety of scenarios.
                             </p>
                         </td>
                         <td></td>
                         <td class="rainbow" id="serv3">
                             <h2><u>Game Modification</u></h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vehicula posuere hendrerit. Donec sed fermentum augue. Praesent sapien lacus, posuere vitae risus sit amet, mattis suscipit erat. Praesent venenatis nibh lectus. Vivamus at volutpat metus. Nullam tincidunt ornare nisl in hendrerit. Proin sapien lectus, imperdiet eget odio eget, egestas lobortis tortor. Quisque mi ipsum, mattis eget dapibus in, eleifend et quam. Integer pulvinar quam ac nisl pharetra, ut tempus magna finibus. Praesent tristique imperdiet tincidunt. Nullam semper ipsum eu pharetra volutpat. Phasellus sodales tempor velit id accumsan.
+                                FiveM, Garry's Mod & Minecraft game modifications specialising in LUA and JAVA.
                             </p>
                         </td>
                     </tr>
