--- a/jake/index.html
+++ b/jake/index.html
@@ -13,8 +13,8 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.33.3/css/jquery.terminal.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900">
 
-        <script src="main.js"></script>
-        <link href="style.css" rel="stylesheet"/>
+        <script src="../assets/js/jakehop_main.js"></script>
+        <link href="../assets/css/jakehop_style.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://hopdev.co.uk/assets/css/animation.css">
     </head>
     <body style="display: none">
@@ -35,11 +35,11 @@
         </div>
 
         <div id="socials">
-            <a href="http://www.facebook.com/jakehopkins277"><img class="socialImg" src="img/facebook256.png" lin=""></a>
-            <a href="http://www.instagram.com/jhop277"><img class="socialImg" src="img/insta256.png"></a>
-            <a href="mailto:jake@jakehopkins.xyz"><img class="socialImg" src="img/email256.png"></a>
-            <a href="http://www.twitter.com/jhop277"><img class="socialImg" src="img/twitter256.png"></a>
-            <a href="http://www.linkedin.com/in/jakehopkins22"><img class="socialImg" src="img/linkedin256.png"></a>
+            <a href="http://www.facebook.com/jakehopkins277"><img class="socialImg" src="../assets/img/socials/facebook256.png" lin=""></a>
+            <a href="http://www.instagram.com/jhop277"><img class="socialImg" src="../assets/img/socials/insta256.png"></a>
+            <a href="mailto:jake@jakehopkins.xyz"><img class="socialImg" src="../assets/img/socials/email256.png"></a>
+            <a href="http://www.twitter.com/jhop277"><img class="socialImg" src="../assets/img/socials/twitter256.png"></a>
+            <a href="http://www.linkedin.com/in/jakehopkins22"><img class="socialImg" src="../assets/img/socials/linkedin256.png"></a>
         </div>
     </body>
 </html>
