Fixed ruleset links

--- a/jake/index.html
+++ b/jake/index.html
@@ -13,8 +13,8 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.33.3/css/jquery.terminal.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900">
 
-        <script src="../assets/js/jakehop_main.js"></script>
-        <link href="../assets/css/jakehop_style.css" rel="stylesheet"/>
+        <script src="https://hopdev.co.uk/assets/js/jakehop_main.js"></script>
+        <link href="https://hopdev.co.uk/assets/css/jakehop_style.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://hopdev.co.uk/assets/css/animation.css">
     </head>
     <body style="display: none">
